# Starlink-sdk

./: .env.example  CHANGELOG.md  README.md  pyproject.toml  setup_dev.py
examples/: advanced_usage.py  alerts_and_telemetry.py  basic_fleet_health.py  simple_sync_example.py  terminal_management.py
src/starlink_sdk/: __init__.py  auth.py  client.py  exceptions.py  models.py  utils.py
tests/: test_basic.py
